--- a/src/app/components/product-table/product-table.component.html
+++ b/src/app/components/product-table/product-table.component.html
@@ -1,15 +1,3 @@
-<div fxFlex fxLayout="column" fxLayoutGap="10px" style="height: 100vh">
-  <div fxLayout="row wrap">
-    <div
-      *ngFor="let product of products"
-      fxFlex="25"
-      fxLayout="column"
-      style="padding: 5px;">
-
-      <mat-card class="mat-elevation-z10">
-        <mat-card-title> {{ product.title }} </mat-card-title>
-        <mat-card-content> {{ product.description }} </mat-card-content>
-      </mat-card>
-    </div>
-  </div>
+<div class="default-background">
+  <h1>Test</h1>
 </div>
