--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <app-dashboard></app-dashboard>
-<router-outlet></router-outlet>
+<app-product-table></app-product-table>
+<!--<router-outlet></router-outlet>-->
