--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+.default-background {
+  background-color: slategrey;
+}
+/*@import '@angular/material/prebuilt-themes/deeppurple-amber.css';*/
+
+
