added to purchasePage view, added Routing/Navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,1 @@
-<app-dashboard></app-dashboard>
-<app-product-table></app-product-table>
-<!--<router-outlet></router-outlet>-->
+<router-outlet></router-outlet>
