--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -68,6 +68,9 @@
         </div>
       </form>
     </div>
+    <div style=" margin-top: 250px">
+      <input type="button" class="btn btn-primary" (click)="onSearchButtonClick()" value="Display Vehicle" />
+    </div>
 
     <div class="col"></div>
   </div>
