--- a/src/app/components/purchase-page/purchase-page.component.html
+++ b/src/app/components/purchase-page/purchase-page.component.html
@@ -1,3 +1,66 @@
-<p>
-  purchase-page works!
-</p>
+<!-- Codes by HTML.am -->
+
+<!-- CSS Code -->
+<style type="text/css" scoped>
+  .GeneratedText {
+    font-family:Arial, sans-serif;font-size:2em;letter-spacing:0.2em;line-height:1.3em;text-align:center;color:#330099;background-color:#CCFFFF;padding:1.5em;
+  }
+</style>
+
+<!-- HTML Code -->
+<div class="GeneratedText">2019 BMW X6</div>
+
+
+<div id="demoFont">$63,550</div>
+
+<table style="width: 239px;">
+  <tbody>
+  <tr style="height: 23px;">
+    <td style="width: 119px; height: 23px;">MSRP</td>
+    <td style="width: 119px; height: 23px;">&nbsp;$70,000</td>
+  </tr>
+  <tr style="height: 23px;">
+    <td style="width: 119px; height: 23px;">Location</td>
+    <td style="width: 119px; height: 23px;">&nbsp;San Antonio, TX</td>
+  </tr>
+  <tr style="height: 23px;">
+    <td style="width: 119px; height: 23px;">Mileage</td>
+    <td style="width: 119px; height: 23px;">&nbsp;15 miles</td>
+  </tr>
+  <tr style="height: 23px;">
+    <td style="width: 119px; height: 23px;">Transmission</td>
+    <td style="width: 119px; height: 23px;">&nbsp;Automatic</td>
+  </tr>
+  <tr style="height: 23px;">
+    <td style="width: 119px; height: 23px;">Exterior Color</td>
+    <td style="width: 119px; height: 23px;">&nbsp;Black</td>
+  </tr>
+  <tr style="height: 23px;">
+    <td style="width: 119px; height: 23px;">Fuel Economy</td>
+    <td style="width: 119px; height: 23px;">
+      <p>&nbsp;23 MPG City</p>
+      <p>34 MPG Highway</p>
+    </td>
+  </tr>
+  <tr style="height: 23px;">
+    <td style="width: 119px; height: 23px;">&nbsp;Engine</td>
+    <td style="width: 119px; height: 23px;">&nbsp;I4</td>
+  </tr>
+  <tr style="height: 23px;">
+    <td style="width: 119px; height: 23px;">&nbsp;Drivetrain</td>
+    <td style="width: 119px; height: 23px;">&nbsp;Rear-Wheel Drive</td>
+  </tr>
+  <tr style="height: 23px;">
+    <td style="width: 119px; height: 23px;">Condition</td>
+    <td style="width: 119px; height: 23px;">&nbsp;New</td>
+  </tr>
+  <tr style="height: 23px;">
+    <td style="width: 119px; height: 23px;">Available</td>
+    <td style="width: 119px; height: 23px;">&nbsp;Yes</td>
+  </tr>
+  </tbody>
+</table>
+<!-- DivTable.com -->
+<div style=" margin-top: 5px; color:#218C07" >
+  <input type="button" class="btn btn-primary" value="Purchase Vehicle" />
+</div>
