added a confirm purchase view, form to input customer info

--- a/src/app/components/purchase-page/purchase-page.component.html
+++ b/src/app/components/purchase-page/purchase-page.component.html
@@ -62,5 +62,5 @@
 </table>
 <!-- DivTable.com -->
 <div style=" margin-top: 5px; color:#218C07" >
-  <input type="button" class="btn btn-primary" value="Purchase Vehicle" />
+  <input type="button" class="btn btn-primary" (click)="onPurchaseButtonClick()" value="Purchase Vehicle" />
 </div>
